--- a/client/css/faction.css
+++ b/client/css/faction.css
@@ -29,15 +29,15 @@ body {
     cursor: pointer;
     }
     .image1{
-        bottom: 295px;
-        left: 474px;
+        bottom: 42%;
+        left: 31%;
     }
     .image2{
-        bottom: 298px;
-        left: 740px;
+        bottom: 42%;
+        left: 48,5%;
     }
     .image3{
-        bottom: 500px;
+        bottom: 40px;
         left: 740px;
     }
     .image4{
