--- a/client/css/bonus.css
+++ b/client/css/bonus.css
@@ -5,20 +5,70 @@ body {
     flex-direction: column;
     min-height: 100vh;
     background-image: url('../img/bonus.png');
-    background-size: cover;
-    background-repeat: no-repeat;
+    /* background-size: cover; */
+    /* background-repeat: no-repeat; */
     background-position: center;
 }
-.title{
+
+.mySwiper {
+    display: flex;
+    /* justify-content: space-evenly; */
+
+}
+
+.title {
     text-align: center;
     color: #F9C408;
     font-family: Trajan Pro;
     font-size: 30px;
     font-style: normal;
     line-height: normal;
-    }
+}
 
-.valide{
+/* 
+#avatar{
+    display: flex;
+    flex-wrap: nowrap;
+    margin: auto;
+
+} */
+
+
+.avatarImg {
+    margin-top: -50px;
+    width: 130px;
+    height: 280px;
+    margin: 10px;
+    aspect-ratio: 192/434;
+
+
+
+}
+
+.swiper-slide {
+    width: 145px;
+    height: 290px;
+    background-color: #D9D9D94D;
+    margin: 10px;
+    border-radius: 5%;
+    padding-bottom: 10px;
+    box-shadow: 0 0 2em;
+
+}
+
+h3 {
+    text-align: center;
+    border: thin medium;
+    border-radius: 5%;
+    ;
+    border-color: black;
+    /* margin: auto; */
+}
+
+swiper-pagination{
+    margin-bottom: 100px;
+}
+.valide {
     margin-top: auto;
     margin-bottom: 70px;
     cursor: pointer;
@@ -27,18 +77,4 @@ body {
     border: none;
     font-family: Trajan Pro;
     font-size: 29px;
-    }
-    .avatar {
-        margin-top: -50px;
-        width: 25%;
-        margin: 10px;
-        aspect-ratio: 192/434;
-        border-radius: 5%;
-        background-color: #D9D9D94D;
-    }
-    #container2{
-        display: flex;
-        justify-content: space-evenly;
-        margin-top: 100px;
-
-    }
+}
