--- a/client/css/bonus.css
+++ b/client/css/bonus.css
@@ -45,9 +45,14 @@ body {
 
 }
 
+.swiper-wrapper{
+    width: 70%;
+
+}
+
 .swiper-slide {
     width: 145px;
-    height: 290px;
+    height: 350px;
     background-color: #D9D9D94D;
     margin: 10px;
     border-radius: 5%;
@@ -55,6 +60,7 @@ body {
     box-shadow: 0 0 2em;
 
 }
+
 
 h3 {
     text-align: center;
