--- a/client/css/bonus.css
+++ b/client/css/bonus.css
@@ -8,11 +8,17 @@ body {
     /* background-size: cover; */
     /* background-repeat: no-repeat; */
     background-position: center;
+    
 }
 
 .mySwiper {
     display: flex;
+    justify-content: center; 
+    align-items: center;
     margin: auto;
+    width: 100%;
+    /* overflow: hidden; /* Empêche le débordement du contenu des slides 
+    position: relative; */
   
 }
 
@@ -36,8 +42,8 @@ body {
 
 .avatarImg {
     margin-top: -50px;
-    width: 130px;
-    height: 280px;
+    width: 200px;
+    height: 400px;
     margin: 10px;
     aspect-ratio: 192/434;
 
@@ -45,19 +51,23 @@ body {
 
 }
 
-.swiper-wrapper{
-    width: 70%;
-
+ .swiper-wrapper{
+    display: flex; 
 }
 
 .swiper-slide {
-    width: 145px;
-    height: 350px;
+    flex: 0 0 10%; 
+    height: 470px;
+    /* background-position: center;
+    background-size: cover; */
     background-color: #D9D9D94D;
     margin: 10px;
     border-radius: 5%;
     padding-bottom: 10px;
     box-shadow: 0 0 2em;
+    /* position: relative; 
+    left: 0;
+    right: 0; */
 
 }
 
