--- a/client/css/faction.css
+++ b/client/css/faction.css
@@ -7,7 +7,8 @@ body {
     box-sizing: border-box;
     overflow: hidden;
 }
-.container{
+
+.container {
     display: flex;
     justify-content: center;
     min-width: 100vw;
@@ -18,9 +19,10 @@ body {
     background-position: center;
     position: relative;
 }
-.title{
+
+.title {
     text-align: center;
-    color:#50074D;
+    color: #50074D;
     font-family: Trajan Pro;
     font-size: 30px;
     font-style: normal;
@@ -30,33 +32,44 @@ body {
     background: #D9D9D9;
     width: 320px;
     height: 50px;
-    }
-.faction{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 40px;
+}
+
+.faction {
     position: absolute;
     width: 4%;
     aspect-ratio: 1;
     cursor: pointer;
 }
-.image1{
+
+.image1 {
     bottom: 41%;
     left: 30.8%;
 }
-.image2{
+
+.image2 {
     bottom: 41%;
     left: 48%;
 }
-.image3{
+
+.image3 {
     bottom: 65.6%;
     left: 48%;
 }
-.image4{
+
+.image4 {
     bottom: 17%;
     left: 48%;
-    }
-.image5{
+}
+
+.image5 {
     bottom: 41%;
     right: 31.9%;
 }
+
 .modal {
     display: none;
     position: fixed;
@@ -69,6 +82,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 5%;
 }
+
 .monster-info {
     display: flex;
     align-items: center;
@@ -86,17 +100,53 @@ body {
     margin-top: 10px;
 }
 
-.stagecontainer{
-display: flex;
-flex-direction: column;
-position: fixed;
-right: 5px;
-top: 110px;
-width: 250px;
-height: 500px;
-padding: 10px;
+.stagecontainer {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    right: 5px;
+    top: 110px;
+    width: 250px;
+    height: 500px;
+    padding: 10px;
 }
-.stagemini{
+
+.stagemini {
     width: 170px;
     height: 120px;
+}
+
+#valide {
+    margin-top: auto;
+    margin-right: 330px;
+    margin-bottom: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    color: #F9C408;
+    background-color: transparent;
+    border: none;
+    font-family: Trajan Pro;
+    font-size: 29px;
+}
+
+
+
+.cercle{
+    border: 4px solid #D9D9D94D;
+    border-radius: 50%;
+}
+
+
+@keyframes borderAnimation {
+    0% {
+        border-color: #FF5733;
+    }
+    50% {
+        border-color: #F9C408;
+    }
+    100% {
+        border-color: #50074D;
+    }
 }
