--- a/client/css/faction.css
+++ b/client/css/faction.css
@@ -123,7 +123,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    cursor: pointer;
+    /* cursor: pointer; */
     color: #F9C408;
     background-color: transparent;
     border: none;
