--- a/client/css/règle.css
+++ b/client/css/règle.css
@@ -17,13 +17,18 @@ font-family: Trajan Pro;
 font-size: 44px;
 font-style: normal;
 line-height: normal;
+
 }
 .container{
+    position: fixed; 
+    top: 25%;
+    left: 29%;
 text-align: center;
 display: flex;
 flex-direction:column;
 align-items: center;
-color: #070009;
+color:  #070009;
+font-weight: 900;
 text-align: center;
 font-family: Trajan Pro;
 font-size: 20px;
@@ -41,6 +46,7 @@ line-height: 2.5;
     transform: rotate(90deg);
     background-color: transparent;
     cursor: pointer;
+    margin-top: 50px;
 }
 .triangle-button:hover{
     border-bottom: 35px solid #c79d08;
