--- a/client/css/bonus.css
+++ b/client/css/bonus.css
@@ -6,19 +6,21 @@ body {
     min-height: 100vh;
     background-image: url('../img/bonus.png');
     /* background-size: cover; */
-    /* background-repeat: no-repeat; */
+    background-repeat: no-repeat;
     background-position: center;
 
 }
 
 .mySwiper {
+    /* position: fixed; 
+    top: 25%;
+    left: 0%; */
     display: flex;
     justify-content: center;
     align-items: center;
     margin: auto;
     width: 100%;
-    
-    /* overflow: hidden; /* Empêche le débordement du contenu des slides 
+    overflow: hidden; /* Empêche le débordement du contenu des slides 
     position: relative; */
 
 }
@@ -65,7 +67,7 @@ body {
     /* background-position: center;
     background-size: cover; */
     background-color: #D9D9D94D;
-    margin: 10px;
+    margin: px;
     border-radius: 5%;
     padding-bottom: 10px;
     box-shadow: 0 0 2em;
