--- a/client/css/choixunite.css
+++ b/client/css/choixunite.css
@@ -25,7 +25,7 @@ body {
 }
 #container2{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .avatar {
