--- a/client/css/choixunite.css
+++ b/client/css/choixunite.css
@@ -36,13 +36,15 @@ body {
     background-color: #D9D9D94D;
 }
 
-.section {
+.section1, .section2 {
     display: flex;
     flex-wrap: wrap;
     width: 40%;
     align-items: center;
     padding: 10px;
 }
+
+
 #section1{
 justify-content: right;
 }
@@ -176,4 +178,9 @@ justify-content: right;
     100% {
         border-color: #50074D;
     }
+}
+.unite-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
