icône volume et mute sur toutes les page

--- a/client/css/bonus.css
+++ b/client/css/bonus.css
@@ -11,6 +11,12 @@ body {
 
 }
 
+header{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
 .mySwiper {
     /* position: fixed; 
     top: 25%;
