--- a/client/css/choixunite.css
+++ b/client/css/choixunite.css
@@ -6,8 +6,15 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    position: relative;
+
 }
 
+header{
+    position: absolute;
+    top: 15px;
+    right: 20px;
+}
 .title {
     text-align: center;
     color: #F9C408;
