--- a/client/css/faction.css
+++ b/client/css/faction.css
@@ -6,8 +6,14 @@ body {
     background-color: black;
     box-sizing: border-box;
     overflow: hidden;
+    position: relative;
 }
 
+header{
+    position: absolute;
+    top: 10px;
+    right: 20px;
+}
 .container {
     display: flex;
     justify-content: center;
@@ -25,12 +31,10 @@ body {
     margin: auto;
     position: absolute;
     display: flex;
-    top: 20px;
+    top: 50px;
     justify-content: center;
     align-items: center;
     justify-content: space-between;
-  
-
 
 }
 
