--- a/client/css/resumepartie.css
+++ b/client/css/resumepartie.css
@@ -7,6 +7,13 @@ body {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
+	position: relative;
+}
+
+header{
+    position: absolute;
+    top: 20px;
+    right: 20px;
 }
 
 .container {
